--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -61,6 +61,11 @@
 	margin: 40px 0;
 	text-align: center;
 
+	img {
+		height: 100px;
+		width: auto;
+	}
+
 	p {
 		max-width: 700px;
 		margin: 0 auto;
