--- a/sass/partials/_2_variables.scss
+++ b/sass/partials/_2_variables.scss
@@ -4,7 +4,9 @@
 /* ### Colors */
 
 $primary-color: #E4003F;
-$secondary-color: #0099AF;
+$secondary-color: #02ccff;
+// Martin utilise: #02ccff
+// Vert canard d'origine: #0099AF
 $accent-color: #E4003F;
 
 $base-dark: #3E3E3E;
