--- a/sass/partials/_6_header.scss
+++ b/sass/partials/_6_header.scss
@@ -2,10 +2,11 @@
 ---------------------------------------------------------------------------------------------------- */
 
 .site-header {
-	background-color: rgba(255, 255, 255, 0.92);
+	background-color: $white;
 	position: fixed;
 	z-index: 10;
 	width: 100%;
+	border-bottom: $site-border;
 }
 
 .site-header > .wrap {
