--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -19,6 +19,7 @@
 	border: $site-border;
 	border-radius: $site-radius;
 	text-align: center;
+	position: relative;
 
 	img {
 		width: 100%;
@@ -30,22 +31,53 @@
 		border-top-right-radius: $site-radius;
 	}
 
-	p {
-		padding: 6px 10px 13px;
-		margin: 0;
-		border-bottom: $site-border;
-	}
+	.item-content {
+		h4, h5, h6 {
+			padding: 0;
+			margin: 0;
+			a {
+				color: $base-dark;
+				text-decoration: none;
+			}
+		}	
 
-	a.read-more {
-		color: $primary-color;
-		text-decoration: none;
-		padding: 14px;
-		display: block;
-		transition: background-color 1s ease;
+		h6 {
+			position: absolute;
+			top: 6px;
+			left: -3px;
 
-		&:hover {
-			color: $base-dark;
-			background-color: $fifth-dark;
+			a {
+				color: $white;
+				text-align: left;
+				@include font-size($font-size-xs);
+				text-transform: uppercase;
+				display: block;
+				float: left;
+				clear: left;
+				padding: 7px 10px;
+				margin-bottom: 2px;
+				opacity: .94;
+				background-color: $secondary-color;
+			}
+		}
+		
+		p {
+			padding: 6px 30px 13px;
+			margin: 0;
+			border-bottom: $site-border;
+		}
+	
+		a.read-more {
+			color: $primary-color;
+			text-decoration: none;
+			padding: 14px;
+			display: block;
+			transition: background-color 1s ease;
+	
+			&:hover {
+				color: $base-dark;
+				background-color: $fifth-dark;
+			}
 		}
 	}
 }
@@ -261,136 +293,99 @@
 
 .feed {
 	margin: 0 0 40px;
-
-	h4, h5, h6 {
-		a {
-			text-decoration: none;
-		}
-	}
-
+	
 	&.feed-timeline {
 		.wrap {
 			max-width: 740px;
 		}
 	}
-
-	.feed-item {
-		position: relative;
-
-		h4 {
-			padding: 0;
-			margin: 0;
-			a {
-				color: $base-dark;
-			}
-		}	
-	
-		h5 {
-			color: $base-dark;
-		}
-	
-		h6 {
-			position: absolute;
-			top: 10px;
-			left: -4px;
-
-			a {
-				color: $white;
-				text-align: left;
-				@include font-size($font-size-xs);
-				text-transform: uppercase;
-				display: block;
-				float: left;
-				clear: left;
-				padding: 7px 10px;
-				margin-bottom: 2px;
-				opacity: .94;
-				background-color: $secondary-color;
-			}
-		}
-	}
 }
 
 .timeline-item {
-	position: relative;
-	margin: 20px 0;
-	border: $site-border;
-	border-radius: $site-radius;
+	margin: 30px 0;
 
-	img {
-		float: left;
-		margin-right: 20px;
-		border-top-left-radius: $site-radius;
-		border-bottom-left-radius: $site-radius;
-	}
-
-	.item-content {
-		float: left;
-		width: 54%;
-	}
-
-	h4 {
-		&:after {
-			content: "";
-			width: 30px;
-			margin: 2px 0 10px;
-			display: block;
-			border-top: $site-border;
-		}
-	}
-
-	.item-date {
-		display: block;
-		margin-bottom: -6px;
-		@include font-size($font-size-xs);
-		font-weight: $font-weight-superbold;
-	}
-
-	p {
-		margin: 0 0 10px;
-	}
-
-	ul.tags {
-		list-style: none;
-		margin: 0;
-		padding: 0;
-		overflow: hidden;
-		height: 30px;
-
-		li {
+	.blurb {
+		img {
 			float: left;
-			background: $fourth-dark;
-			border-radius: $site-radius;
-			display: inline-block;
-			height: 26px;
-			line-height: 24px;
-			padding: 0 10px 0 24px;
-			position: relative;
-			margin: 0 10px 10px 0;
-			transition: color 0.2s;
-
-			a {
-				color: $secondary-dark;
-				@include font-size($font-size-xs);
-				text-decoration: none;
-				text-transform: uppercase;
-				font-weight: $font-weight-bold;
-
-				&:hover {
-					color: $primary-color;
+			margin-right: 20px;
+			width: auto;
+			height: auto;
+			border-top-left-radius: $site-radius;
+			border-bottom-left-radius: $site-radius;
+			border-top-right-radius: 0;
+		}
+	
+		.item-content {
+			float: left;
+			width: 54%;
+			text-align: left;
+	
+			h4 {
+				&:after {
+					content: "";
+					width: 30px;
+					margin: 6px 0 10px;
+					display: block;
+					border-top: $site-border;
 				}
 			}
-
-			&:before {
-				content: '';
-				background: $white;
-				border-radius: 10px;
-				box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
-				height: 6px;
-				left: 10px;
-				position: absolute;
-				width: 6px;
-				top: 10px;
+		
+			.item-date {
+				display: block;
+				margin-bottom: -2px;
+				@include font-size($font-size-xs);
+				font-weight: $font-weight-superbold;
+			}
+		
+			p {
+				margin: 0 0 10px;
+				padding: 0;
+				border-bottom: none;
+			}
+		
+			ul.tags {
+				list-style: none;
+				margin: 0;
+				padding: 0;
+				overflow: hidden;
+				height: 30px;
+		
+				li {
+					float: left;
+					background: $fourth-dark;
+					border-radius: $site-radius;
+					display: inline-block;
+					height: 26px;
+					line-height: 24px;
+					padding: 0 10px 0 24px;
+					position: relative;
+					margin: 0 10px 10px 0;
+					transition: color 0.2s;
+		
+					a {
+						color: $secondary-dark;
+						@include font-size($font-size-xs);
+						text-decoration: none;
+						text-transform: uppercase;
+						font-weight: $font-weight-bold;
+		
+						&:hover {
+							color: $primary-color;
+						}
+					}
+		
+					&:before {
+						content: '';
+						background: $white;
+						border-radius: 10px;
+						box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
+						height: 6px;
+						left: 10px;
+						position: absolute;
+						width: 6px;
+						top: 10px;
+					}
+				}
 			}
 		}
 	}
