--- a/style-human.css
+++ b/style-human.css
@@ -361,18 +361,22 @@ i {
 }
 
 blockquote {
-  margin: 40px;
+  margin: 40px 0;
+  color: #02ccff;
+  font-family: Georgia, serif;
 }
 
 blockquote::before {
   content: "\201C";
   display: block;
-  font-size: 30px;
-  font-size: 3rem;
+  text-align: left;
+  font-size: 100px;
+  font-size: 10rem;
   height: 0;
-  left: -20px;
+  left: -50px;
   position: relative;
-  top: -10px;
+  top: -40px;
+  color: #02ccff;
 }
 
 /* ## Headings
@@ -1578,8 +1582,9 @@ img.alignright,
 /* ## Sections : Text Blocks
 --------------------------------------------- */
 .text-block {
-  margin: 40px 0 20px;
+  margin: 40px auto 20px;
   text-align: center;
+  max-width: 700px;
 }
 .text-block img {
   height: 100px;
@@ -1589,6 +1594,20 @@ img.alignright,
   max-width: 700px;
   margin: 0 auto;
   text-align: justify;
+}
+.text-block ol {
+  text-align: left;
+  padding-bottom: 20px;
+}
+.text-block ol li {
+  list-style-type: decimal;
+}
+.text-block ul {
+  text-align: left;
+  padding-bottom: 20px;
+}
+.text-block ul li {
+  list-style-type: disc;
 }
 
 /* ## Sections : Quote Blocks
