custom template and styling added for video embed

--- a/sass/partials/_2_variables.scss
+++ b/sass/partials/_2_variables.scss
@@ -27,6 +27,7 @@ $white: #FFF;
 
 $font-heading: 'Source Sans Pro', sans-serif;
 $font-body: 'Source Sans Pro', sans-serif;
+$font-serif: Georgia, serif;
 // loaded in functions.php
 
 $font-weight-superbold: 700;
