--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -1845,6 +1845,38 @@ img.alignright,
   background-position: 50% 100%;
 }
 
+/* ## Sections : Video Embed
+https://www.smashingmagazine.com/2014/02/making-embedded-content-work-in-responsive-design/
+--------------------------------------------- */
+.video-block {
+  max-width: 1000px;
+  margin: 40px auto;
+}
+.video-block p {
+  text-align: center;
+  font-style: italic;
+  font-family: Georgia, serif;
+  color: rgba(62, 62, 62, 0.38);
+  font-size: 14px;
+  font-size: 1.4rem;
+  margin: 10px 0;
+}
+
+.video-embed-responsive {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 35px;
+  height: 0;
+  overflow: hidden;
+}
+.video-embed-responsive iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 /* ## Entries
 --------------------------------------------- */
 .entry {
