--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -454,6 +454,42 @@
 	background-position: 50% 100%;
 }
 
+
+/* ## Sections : Video Embed
+https://www.smashingmagazine.com/2014/02/making-embedded-content-work-in-responsive-design/
+--------------------------------------------- */
+
+.video-block {
+	max-width: 1000px;
+	margin: 40px auto;
+
+	p {
+		text-align: center;
+		font-style: italic;
+		font-family: $font-serif;
+		color: $third-dark;
+		@include font-size($font-size-xs);
+		margin: 10px 0;
+	}
+}
+
+.video-embed-responsive {
+	position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 35px;
+    height: 0;
+	overflow: hidden;
+	
+	iframe {
+		position: absolute;
+		top:0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+}
+
+
 /* ## Entries
 --------------------------------------------- */
 
