--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -1852,7 +1852,8 @@ https://www.smashingmagazine.com/2014/02/making-embedded-content-work-in-respons
   max-width: 1000px;
   margin: 40px auto;
 }
-.video-block p {
+
+p.media-caption {
   text-align: center;
   font-style: italic;
   font-family: Georgia, serif;
@@ -1875,6 +1876,15 @@ https://www.smashingmagazine.com/2014/02/making-embedded-content-work-in-respons
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+/* ## Image Block
+--------------------------------------------- */
+.image-block img {
+  width: 100%;
+  max-height: 500px;
+  overflow: hidden;
+  object-fit: cover;
 }
 
 /* ## Entries
