--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -121,6 +121,7 @@
 			color: white;
 			max-width: 700px;
 			margin: 0 auto 20px;
+			text-shadow: 1px 1px 2px $secondary-dark;
 		}
 
 		.brand-logos {
@@ -624,8 +625,11 @@ p.entry-meta {
 	margin-bottom: 0;
 }
 
-.entry-header .entry-meta {
-	margin-bottom: 24px;
+.entry-header {
+	text-align: center;
+	.entry-meta {
+		margin-bottom: 24px;
+	}
 }
 
 .entry-footer .entry-meta {
